<resources>
    <string name="app_name">Patty Rice Trading</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm">Confirm</string>
    <string name="Add_this_item_on_your_kilo_sales">Add this item on your kilo sales? make sure that this item is not existing on kilo sales.</string>
    <string name="cancel">Cancel</string>
    <string name="transaction_success">Transaction success</string>
    <string name="add_rice">Add Rice</string>
    <string name="orders">Orders</string>
    <string name="sort">Sort</string>
    <string name="filters">Filters</string>
    <string name="sales_history">Sales History</string>
    <string name="by_week">Week</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="apply">Apply</string>
</resources>