<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.admin.inventory.InventoryScreen">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addRiceInventoryScreen"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/add_rice"
        app:cornerRadius="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/OrdersInventoryScreen"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/orders"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toEndOf="@+id/addRiceInventoryScreen"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sortInventoryMenu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/sort"
        app:layout_constraintBottom_toBottomOf="@+id/OrdersInventoryScreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/OrdersInventoryScreen"
        app:layout_constraintTop_toTopOf="@+id/OrdersInventoryScreen">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.airbnb.epoxy.EpoxyRecyclerView
        android:id="@+id/riceListEpoxyRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:itemSpacing="6dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OrdersInventoryScreen"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/inventory_card_rice_model" />

    <include
        android:id="@+id/loadingState"
        layout="@layout/loading_screen"
        tools:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>